Created test class with methods and attributes in jupiter notebook

--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -9,11 +9,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello World\n"
+      "0 0\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "import math\n",
+    "\n",
+    "class Point():\n",
+    "    def move(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    \n",
+    "    def reset(self):\n",
+    "        self.move(0, 0)\n",
+    "\n",
+    "    def calculate_distance(self, other_point):\n",
+    "        return math.sqrt(\n",
+    "            (self.x - other_point.x)**2 +\n",
+    "            (self.y - other_point.y)**2\n",
+    "        )\n",
+    "\n",
+    "p = Point()\n",
+    "p.reset()\n",
+    "print(p.x, p.y)"
+   ]
   }
  ],
  "metadata": {
