--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "\n",
@@ -28,11 +20,42 @@
     "        return math.sqrt(\n",
     "            (self.x - other_point.x)**2 +\n",
     "            (self.y - other_point.y)**2\n",
-    "        )\n",
+    "        )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How to use it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "4.47213595499958\n",
+      "4.47213595499958\n"
+     ]
+    }
+   ],
+   "source": [
+    "point1 = Point()\n",
+    "point2 = Point()\n",
     "\n",
-    "p = Point()\n",
-    "p.reset()\n",
-    "print(p.x, p.y)"
+    "point1.reset()\n",
+    "point2.move(5, 0)\n",
+    "print(point2.calculate_distance(point1))\n",
+    "assert (point2.calculate_distance(point1) == point1.calculate_distance(point2))\n",
+    "point1.move(3, 4)\n",
+    "print(point1.calculate_distance(point2))\n",
+    "print(point2.calculate_distance(point1))"
    ]
   }
  ],
@@ -43,7 +66,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.3"
   }
  },
